Fix qualifier separator whitespace handling
This brings back the `display: flex` whitespace handling that worked
fine, but uses `white-space: pre` to protect the intentional space
character (instead of the non-printable char hack)

This also updates constraints report positioning (which relied on
`display: table-inline`) differently. I've just added a wrapper
element around the constraints node, so that it's guaranteed to
be positioned correctly inside the flexbox, before the actual
(now child) node then gets moved up, absolutely, relative to the
wrapper node.

Bug: T245681
Bug: T247711

--- a/resources/filepage/styles/mediainfo-filepage-statementpanel.less
+++ b/resources/filepage/styles/mediainfo-filepage-statementpanel.less
@@ -23,11 +23,13 @@
 		opacity: 0.5;
 	}
 
-	/* stylelint-disable selector-class-pattern */
-	.wbqc-reports-button,
-	.oo-ui-buttonElement.oo-ui-iconElement.wbqc-reports-button {
-		position: absolute;
-		top: -@xs-spacing;
+	.wbmi-constraints-report {
+		position: relative;
+
+		/* stylelint-disable-next-line selector-class-pattern */
+		.wbqc-reports-button {
+			position: absolute;
+			top: -@xs-spacing;
+		}
 	}
-	/* stylelint-enable selector-class-pattern */
 }
